# NJUPT_Program_Design_Library

./: CMakeLists.txt  create_icon.py  create_simple_icon.py  debug_search.md  test_books.json  test_search.md  主要函数流程.docx  主要函数流程图.vsdx  功能实现说明.md  南京邮电大学程序设计报告.docx  南京邮电大学程序设计报告样稿-2024版.docx  南邮图书馆管理系统-周剑-光电信息科学与工程 (1).doc  应用图标设置说明.md  搜索相关：.md  程序设计实验报告.docx  系统功能框架图.vsdx  续借功能测试计划.md  项目文件结构说明.md
.claude/: settings.local.json
src/: main.cpp
src/resource/: app_icon.rc  book_copies.json  library_data.json  res.qrc  users.json
src/utils/: book.h  bookcopy.h  bookcopymanager.cpp  bookcopymanager.h  bookdisplay.cpp  bookdisplay.h  databasemanager.cpp  databasemanager.h  librarymanager.cpp  librarymanager.h  log.cpp  log.h  userrole.h
src/widget/: bookdetaildialog.cpp  bookdetaildialog.h  borrowdialog.cpp  borrowdialog.h  copymanagementdialog.cpp  copymanagementdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.cpp  ui_mainwindow.h
